[package]
name = "actix-auth"
version = "0.1.1"
authors = ["Abhishek Chanda <no@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.8", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
actix-service = "2.0.2"
alcoholic_jwt = "1.0.1"
reqwest = { version = "0.11.10", features = ["json"] }
actix-rt = "2.7.0"